function for deaths data cleaning defined

--- a/Global_Data_Cleaning.ipynb
+++ b/Global_Data_Cleaning.ipynb
@@ -2,26 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "globalDeathsCSV = pd.read_csv(\"time_series_covid19_deaths_global.csv\")\n",
-    "\n",
-    "removeColumns = globalDeathsCSV.drop(['Province/State', 'Lat', 'Long'], axis=1)\n",
-    "\n",
-    "allCountriesFinalData = removeColumns.groupby(['Country/Region'], as_index=False).agg('sum')\n",
-    "\n",
-    "allCountriesFinalData.to_csv (r'global_deaths.csv', index = True, header=True)"
+    "def cleaningGlobalDeathsData():\n",
+    "    globalDeathsCSV = pd.read_csv(\"time_series_covid19_deaths_global.csv\")\n",
+    "    removeColumns = globalDeathsCSV.drop(['Province/State', 'Lat', 'Long'], axis=1)\n",
+    "    allCountriesFinalData = removeColumns.groupby(['Country/Region'], as_index=False).agg('sum')\n",
+    "    allCountriesFinalData.to_csv (r'global_deaths.csv', index = True, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaningGlobalDeathsData()"
    ]
   },
   {
