Data Cleaning -> COVID-19 -> Confirmed Global

--- a/SMDMDataPreProcessing.ipynb
+++ b/SMDMDataPreProcessing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1H_GCc9ed1nC6kYLCzT00A_-o1AIEQIwW",
-      "authorship_tag": "ABX9TyPxUeuHkEJedpWmMwpX74MG",
+      "authorship_tag": "ABX9TyM6kTP83WDr+SIgOlxa9S2c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "#Using matplotlib \n",
         "import matplotlib.pyplot as plt\n",
         "#Reading data from the csv file\n",
-        "df_confirmed = pd.read_csv(\"/content/drive/My Drive/SMDMProject/time_series_covid19_confirmed_global.csv\")\n",
+        "df_confirmed = pd.read_csv(\"time_series_covid19_confirmed_global.csv\")\n",
         "#Displaying first five entries of the dataframe\n",
         "df_confirmed.head()"
       ],
@@ -1107,7 +1107,7 @@
       "source": [
         "#Printing the final dataframe\n",
         "print(new_df)\n",
-        "new_df.to_csv(r'/content/drive/My Drive/SMDMProject/cleaned_time_series_covid19_confirmed_global.csv', index=False)"
+        "new_df.to_csv(r'cleaned_time_series_covid19_confirmed_global.csv', index=False)"
       ],
       "execution_count": 5,
       "outputs": [
