--- a/TweetRelated/FetchTweetData.ipynb
+++ b/TweetRelated/FetchTweetData.ipynb
@@ -25,10 +25,10 @@
     "\n",
     "\n",
     "def oauth_login():\n",
-    "    CONSUMER_KEY = 'WBHkhQ3mw9ogV0Rd2XXFAq8rd'\n",
-    "    CONSUMER_SECRET = '0O5PuMVxoumlUkYYGaV0IJEuBk7CN4djztz9RpTzFUJYUDhsVe'\n",
-    "    OAUTH_TOKEN = '1228341286886924289-rpd0vcn8BJLPVlOB5kKfzLuI2mCGCP'\n",
-    "    OAUTH_TOKEN_SECRET = 'SwEpzMxdROIBWl3HC7nCsU8VfhPLcNb5hcy89SfC3qrXP'\n",
+    "    CONSUMER_KEY = ''\n",
+    "    CONSUMER_SECRET = ''\n",
+    "    OAUTH_TOKEN = ''\n",
+    "    OAUTH_TOKEN_SECRET = ''\n",
     "    auth = twitter.oauth.OAuth(OAUTH_TOKEN,OAUTH_TOKEN_SECRET,CONSUMER_KEY,CONSUMER_SECRET)\n",
     "    twitter_api = twitter.Twitter(auth = auth)\n",
     "    return twitter_api\n",
