--- a/Results/Gov_Policies_Sentiment_Analysis/Sentiment_Analysis_Govt_Tweets.ipynb
+++ b/Results/Gov_Policies_Sentiment_Analysis/Sentiment_Analysis_Govt_Tweets.ipynb
@@ -3121,10 +3121,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "##### CDCEmergency"
    ]
@@ -3498,6 +3496,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### NIAIDNews"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {
@@ -3861,7 +3866,6 @@
     }
    ],
    "source": [
-    "#U=isNIAIDNews,V=IsV2019N\n",
     "govt_NIAIDNews_df = group_tweets_by_govt_mentions('U')\n",
     "govt_NIAIDNews_df"
    ]
