--- a/Results/Prediction_Model_Results/PredictBasedOnConfirmedCase.ipynb
+++ b/Results/Prediction_Model_Results/PredictBasedOnConfirmedCase.ipynb
@@ -839,12 +839,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Modelling and T Dataset"
+    "### Modelling and Training Dataset"
    ]
   },
   {
@@ -866,11 +864,12 @@
    "source": [
     "from sklearn.metrics import precision_recall_fscore_support\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=1) \n",
+    "\n",
     "# 80% training and 20% test\n",
     "clf = DecisionTreeClassifier()\n",
     "clf = clf.fit(X_train,y_train)\n",
     "y_pred = clf.predict(X_test)\n",
-    "#print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n",
+    "\n",
     "# precision, recall ,f1, confusion matrix\n",
     "precision_recall_fscore_support(y_test, y_pred, average='weighted')"
    ]
@@ -1721,8 +1720,7 @@
     "    if row[\"Severity_None\"] == 1:\n",
     "        Target.append(0)\n",
     "    else:\n",
-    "        Target.append(1)\n",
-    "#Target"
+    "        Target.append(1)"
    ]
   },
   {
@@ -4360,7 +4358,6 @@
     }
    ],
    "source": [
-    "# To be continued............\n",
     "from keras.wrappers.scikit_learn import KerasClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import KFold\n",
